--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,13 @@
+@font-face {
+    font-family: 'MyFont';
+    src: url('./NotoSansShavian-Regular.woff') format('woff'),
+        url('./SourceCodePro-Regular.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+}
+
 .hello {
     color: red;
+    font-family: 'MyFont';
     background: url('./icon.png');
 }
